Fix country selector width on mobile view.

--- a/src/stylesheets/main.styl
+++ b/src/stylesheets/main.styl
@@ -401,6 +401,8 @@ li.terms-section
 #search-form
   margin-top 30px
   margin-bottom 40px
+  .ui-autocomplete-input
+    width 100%
   .search-box
     fieldset
       background-color rm-dark-grey
